--- a/basket.html
+++ b/basket.html
@@ -262,229 +262,149 @@
 
 <!-- end header.html-->
 
-<!-- start shopping-and-paymen-head.html-->
-<section class="shopping-head">
+<!-- start basket.html-->
+<div class="basket">
     <div class="container">
-        <div class="shopping-head__wrap">
-            <div class="shopping-head__wrap__text">
-                <h1>МОНОКОЛЕСО AIRWHEEL X5</h1>
-                <p>Приобретая моноколесо Airwheel X5, Вы сможете отправиться на прогулку в парк или же покататься вместе
-                    с друзьями. </p>
-                <h2 class="sale"><span>скидка 20%</span> до 5.12.2016</h2>
-                <a href="#" class="btn-orange">узнать подробнее</a>
-            </div>
-            <div class="shopping-head__wrap__img">
-                <img src="img/shipping-and-paymen/head-img-girl.png" alt="">
-            </div>
-        </div>
-    </div>
-</section>
-<!-- end shopping-and-paymen-head.html-->
+        <div class="basket__order">
+            <h2>ОФОРМЛЕНИЕ ЗАКАЗА</h2>
 
-<!-- start services.html-->
-<div class="home-stock">
-    <div class="container">
-        <div class="home-stock__head">
-        <ul>
-            <li><img src="img/icons/delivery.png" alt="">
-                <p><span>Бесплатная доставка</span><br />по всей России</p>
-            </li>
-            <li class="vertical-line"></li>
-            <li><img src="img/icons/guarantee.png" alt="">
-                <p><span>Гарантия</span><br />12 месяцев</p>
-            </li>
-            <li class="vertical-line"></li>
-            <li><img src="img/icons/test-drive.png" alt="">
-                <p><span>Тест-драйв</span><br />перед покупкой</p>
-            </li>
-            <li class="vertical-line"></li>
-            <li><img src="img/icons/repair.png" alt="">
-                <p><span>Ремонт</span><br />любой сложности</p>
-            </li>
-        </ul>
-    </div>
-    </div>
-</div>
-<!-- end services.html-->
+            <div class="block">
+                <div class="block__top">
+                    <h3>фотография</h3>
+                </div>
+                <div class="block__bottom">
+                    <img src="img/gyro-umka.png" alt="">
+                </div>
+            </div>
 
-<!-- start reviews-about-us.html-->
-<section class="reviews-about">
-    <div class="container">
-        <div class="reviews-about__title">
-            <h1>отзывы о нас</h1>
-        </div>
-    </div>
+            <div class="block">
+                <div class="block__top">
+                    <h3>Наименование товара</h3>
+                </div>
+                <div class="block__bottom">
+                    <p>ГИРОСКУТЕР SMART BALANCE UMKA "ГОЛУБОЙ"</p>
+                </div>
+            </div>
 
-    <div class="reviews-about__reviews">
-        <div class="container">
-            <div class="reviews-about__reviews__initials">
-                <div class="reviews-about__reviews__initials__photo">
-                    <img src="img/rewiews/photo.png" alt="">
+            <div class="block">
+                <div class="block__top">
+                    <h3>кол-во</h3>
                 </div>
-                <h4>Александр</h4>
-                <p>
-                   <span class="product"> Гироскутер Ninebot Mini White</span>
-                    <span class="date">18.05.2017</span>
-                </p>
-            </div>
-            <div class="reviews-about__reviews__text">
-                <span class="arrow-left">«</span>
-                <p>
-                    Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the
-                    industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type
-                    and scrambled it to make a type specimen book.
-                </p>
-                <span class="arrow-right">»</span>
-            </div>
-        </div>
-    </div>
-    <div class="reviews-about__reviews">
-        <div class="container">
-            <div class="reviews-about__reviews__initials">
-                <div class="reviews-about__reviews__initials__photo">
-                    <img src="img/rewiews/photo.png" alt="">
+                <div class="block__bottom">
+                    <div class="counter">
+                        <span class="minus">-</span>
+                        <span class="cipher"></span>
+                        <span class="plus">+</span>
+                    </div>
                 </div>
-                <h4>Александр</h4>
-                <p>
-                    <span class="product"> Гироскутер Ninebot Mini White</span>
-                    <span class="date">18.05.2017</span>
-                </p>
             </div>
-            <div class="reviews-about__reviews__text">
-                <span class="arrow-left">«</span>
-                <p>
-                    Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the
-                    industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type
-                    and scrambled it to make a type specimen book.
-                </p>
-                <span class="arrow-right">»</span>
-            </div>
-        </div>
-    </div>
-    <div class="reviews-about__reviews">
-        <div class="container">
-            <div class="reviews-about__reviews__initials">
-                <div class="reviews-about__reviews__initials__photo">
-                    <img src="img/rewiews/photo.png" alt="">
-                </div>
-                <h4>Александр</h4>
-                <p>
-                    <span class="product"> Гироскутер Ninebot Mini White</span>
-                    <span class="date">18.05.2017</span>
-                </p>
-            </div>
-            <div class="reviews-about__reviews__text">
-                <span class="arrow-left">«</span>
-                <p>
-                    Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the
-                    industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type
-                    and scrambled it to make a type specimen book.
-                </p>
-                <span class="arrow-right">»</span>
-            </div>
-        </div>
-    </div>
-    <div class="reviews-about__reviews">
-        <div class="container">
-            <div class="reviews-about__reviews__initials">
-                <div class="reviews-about__reviews__initials__photo">
-                    <img src="img/rewiews/photo.png" alt="">
-                </div>
-                <h4>Александр</h4>
-                <p>
-                    <span class="product"> Гироскутер Ninebot Mini White</span>
-                    <span class="date">18.05.2017</span>
-                </p>
-            </div>
-            <div class="reviews-about__reviews__text">
-                <span class="arrow-left">«</span>
-                <p>
-                    Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the
-                    industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type
-                    and scrambled it to make a type specimen book.
-                </p>
-                <span class="arrow-right">»</span>
-            </div>
-        </div>
-    </div>
-    <div class="reviews-about__pagination">
-        <div class="container">
-         <div class="reviews-about__pagination__link">
-             <a href="#"><<</a>
-             <a href="#"><</a>
-             <a href="#" class="active">1</a>
-             <a href="#">2</a>
-             <a href="#">3</a>
-             <a href="#">4</a>
-             <a href="#">5</a>
-             <a href="#">></a>
-             <a href="#">>></a>
-         </div>
-      </div>
-    </div>
-</section>
-<!-- end reviews-about-us.html-->
 
-<!-- start reviews-feedback.html-->
-<section class="reviews-feedback">
-    <div class="container">
-        <div class="reviews-feedback__form">
-            <h1>Оставить отзыв</h1>
-            <form action="#">
-                <input type="text" name="name" placeholder="Ваше имя:" required>
-                <input type="email" name="email" placeholder="Ваш e-mail (не публикуется):" required>
-                <input type="text" name="by-product" placeholder="Купленный товар:" required>
-                <textarea name="reviews" cols="30" rows="10" placeholder="Отзыв:" required></textarea>
-                <button type="submit">отправить</button>
+            <div class="block">
+                <div class="block__top">
+                    <h3>цена</h3>
+                </div>
+                <div class="block__bottom">
+                    <p>9800 руб.</p>
+                </div>
+            </div>
+
+            <div class="block">
+                <div class="block__top"></div>
+                <div class="block__bottom">
+                    <img src="img/icons/cross.png" alt="">
+                </div>
+            </div>
+
+            <div class="block">
+                <div class="block__bottom">
+                    <h3>итого: <span>9800 руб.</span></h3>
+                </div>
+            </div>
+
+        </div>
+        <div class="basket__data">
+            <h2>данные покупателя</h2>
+            <form>
+                <input type="text" placeholder="ФИО:">
+                <input type="text" placeholder="Ваш e-mail:">
+                <input type="text" placeholder="Ваш телефон:">
+                <input type="text" placeholder="Ваш город:">
+                <input type="text" placeholder="Ваш адрес:">
+                <textarea cols="30" rows="10" placeholder="Комментарии к покупке:"></textarea>
             </form>
         </div>
-        <div class="reviews-feedback__img">
-            <img src="img/rewiews/photo2.png" alt="">
-        </div>
-    </div>
-</section>
-<!-- end reviews-feedback.html-->
+        <div class="basket__delivery">
+            <h2>способ доставки</h2>
 
-<!-- start home-how-buy.html-->
-<div class="how-buy">
-    <div class="container">
-        <div class="how-buy__text">
-            <h2>КАК КУПИТЬ?</h2>
-            <ol>
-                <li>
-                    <h3>Lorem ipsum.</h3>
-                    <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. At, incidunt.</p>
-                </li>
-                <li>
-                    <h3>Lorem ipsum.</h3>
-                    <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Maiores, natus.</p>
-                </li>
-                <li>
-                    <h3>Lorem ipsum.</h3>
-                    <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Alias, non!</p>
-                </li>
-                <li>
-                    <h3>Lorem ipsum.</h3>
-                    <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Nihil, officia.</p>
-                </li>
-            </ol>
+            <div class="wrap">
+                <div class="box">
+                    <input class="radio" id="delivery-btn1" type="radio" name="delivery-btn">
+                    <label class="forcheck" for="delivery-btn1"><span class="checked"></span></label>
+                </div>
+                <div class="box description">
+                    <h3>Доставка курьером</h3>
+                    <p>Курьер привезет заказ. Все покажет, расскажет, научит.</p>
+                </div>
+                <div class="box price">
+                    <h3>бесплатно</h3>
+                </div>
+            </div>
+
+
+            <div class="wrap">
+                <div class="box">
+                    <input class="radio" id="delivery-btn2" type="radio" name="delivery-btn">
+                    <label class="forcheck" for="delivery-btn2"><span class="checked"></span></label>
+                </div>
+                <div class="box description">
+                    <h3>Доставка курьером</h3>
+                    <p>Курьер привезет заказ. Все покажет, расскажет, научит.</p>
+                </div>
+                <div class="box price">
+                    <h3>бесплатно</h3>
+                </div>
+            </div>
+
         </div>
-        <div class="how-buy__img">
-            <img src="img/sigway.png" alt="">
+        <div class="basket__payment">
+            <h2>СПОСОБ ОПЛАТЫ</h2>
+
+            <div class="wrap">
+                <div class="box">
+                    <input class="radio" id="payment-btn1" type="radio" name="payment-btn">
+                    <label class="forcheck" for="payment-btn1"><span class="checked"></span></label>
+                </div>
+                <div class="box description">
+                    <h3>Наличными</h3>
+                </div>
+            </div>
+
+            <div class="wrap">
+                <div class="box">
+                    <input class="radio" id="payment-btn2" type="radio" name="payment-btn">
+                    <label class="forcheck" for="payment-btn2"><span class="checked"></span></label>
+                </div>
+                <div class="box description">
+                    <h3>Электронными деньгами</h3>
+                </div>
+            </div>
+
+            <div class="wrap">
+                <div class="box">
+                    <input class="radio" id="payment-btn3" type="radio" name="payment-btn">
+                    <label class="forcheck" for="payment-btn3"><span class="checked"></span></label>
+                </div>
+                <div class="box description">
+                    <h3>Банковская карта Visa, MasterCard</h3>
+                </div>
+            </div>
+
+            <a href="#" class="btn-orange">оформить заказ</a>
+
         </div>
     </div>
 </div>
-<!-- end home-how-buy.html-->
-
-<!-- start home-video.html-->
-<div class="video">
-    <div class="container">
-        <div class="video__wrap"><style>.embed-container { position: relative; padding-bottom: 56.25%; height: 0; overflow: hidden; max-width: 100%; } .embed-container iframe, .embed-container object, .embed-container embed { position: absolute; top: 0; left: 0; width: 100%; height: 100%; }</style><div class='embed-container'><iframe src='https://www.youtube.com/embed//reKGWU6wU7g' frameborder='0' allowfullscreen></iframe></div></div>
-        <div class="video__wrap"><style>.embed-container { position: relative; padding-bottom: 56.25%; height: 0; overflow: hidden; max-width: 100%; } .embed-container iframe, .embed-container object, .embed-container embed { position: absolute; top: 0; left: 0; width: 100%; height: 100%; }</style><div class='embed-container'><iframe src='https://www.youtube.com/embed//reKGWU6wU7g' frameborder='0' allowfullscreen></iframe></div></div>
-        <div class="video__wrap"><style>.embed-container { position: relative; padding-bottom: 56.25%; height: 0; overflow: hidden; max-width: 100%; } .embed-container iframe, .embed-container object, .embed-container embed { position: absolute; top: 0; left: 0; width: 100%; height: 100%; }</style><div class='embed-container'><iframe src='https://www.youtube.com/embed//reKGWU6wU7g' frameborder='0' allowfullscreen></iframe></div></div>
-    </div>
-</div>
-<!-- end home-video.html-->
+<!-- end basket.html-->
 
 <!-- start footer.html-->
 <footer class="footer">
