--- a/app/html/header.html
+++ b/app/html/header.html
@@ -151,7 +151,7 @@
                             <li><a href="#">Category-2</a></li>
                             <li><a href="#">Category-3</a></li>
                             <li><a href="#">Category-4</a></li>
-                            <li><a href="#">Category-5</a></li>
+                            <li><a href="basket.html">Category-5</a></li>
                         </ul>
                     </li>
                 </ul>
