--- a/app/html/card-of-product.html
+++ b/app/html/card-of-product.html
@@ -58,7 +58,7 @@
                 <h3>12 500 руб.</h3>
                 <div class="counter">
                     <span class="minus">-</span>
-                    <span class="cipher"></span>
+                    <input class="cipher" type="number" min="1" max="999" value="1">
                     <span class="plus">+</span>
                 </div>
                 <a href="#" class="btn-orange">в корзину</a>
