--- a/basket.html
+++ b/basket.html
@@ -293,7 +293,7 @@
                 <div class="block__bottom">
                     <div class="counter">
                         <span class="minus">-</span>
-                        <span class="cipher"></span>
+                        <input class="cipher" type="number" min="1" max="999" value="1">
                         <span class="plus">+</span>
                     </div>
                 </div>
