add responsive for basket

--- a/basket.html
+++ b/basket.html
@@ -309,7 +309,7 @@
             </div>
 
             <div class="block">
-                <div class="block__top"></div>
+                <div class="block__top for-mobile"></div>
                 <div class="block__bottom">
                     <img src="img/icons/cross.png" alt="">
                 </div>
