add responsive for site

--- a/app/html/card-of-product.html
+++ b/app/html/card-of-product.html
@@ -61,7 +61,7 @@
                     <input class="cipher" type="number" min="1" max="999" value="1">
                     <span class="plus">+</span>
                 </div>
-                <a href="#" class="btn-orange">в корзину</a>
+                <a href="#" class="btn-orange in-basket">в корзину</a>
                 <ul>
                     <li>- Аккумулятор</li>
                     <li>- Bluetooth</li>
@@ -81,6 +81,22 @@
                     <p>Доставка по Москве бесплатно</p>
                 </div>
             </div>
+        </div>
+        <div class="home-stock__head for-card-prod">
+            <ul>
+                <li><img src="img/icons/delivery.png" alt="">
+                    <p><span>Бесплатная доставка</span><br />по всей России</p>
+                </li>
+                <li><img src="img/icons/guarantee.png" alt="">
+                    <p><span>Гарантия</span><br />12 месяцев</p>
+                </li>
+                <li><img src="img/icons/test-drive.png" alt="">
+                    <p><span>Тест-драйв</span><br />перед покупкой</p>
+                </li>
+                <li><img src="img/icons/repair.png" alt="">
+                    <p><span>Ремонт</span><br />любой сложности</p>
+                </li>
+            </ul>
         </div>
     </div>
 </div>
