--- a/app/html/footer.html
+++ b/app/html/footer.html
@@ -78,5 +78,7 @@
 <div class="modal">
     <div class="basket"><img src="img/icons/basket.png" alt=""><span></span></div>
     <p>В вашей корзине 1 товар <span>на сумму 9800 руб.</span></p>
-    <a href="#" class="btn-orange">оформить заказ</a>
+    <a href="basket.html" class="btn-orange">оформить заказ</a>
+</div>
+<div class="overlay">
 </div>
