--- a/app/html/header.html
+++ b/app/html/header.html
@@ -183,13 +183,13 @@
                         <a href="#">Моноколеса</a>
                         <img class="arrow-menu" src="img/icons/arrow-menu.png" alt="">
                         <ul class="menu-mob__list-submenu">
-                            <li><a href="#">Гироскутеры Airwheel</a></li>
-                            <li><a href="#">Гироскутеры EcoDrift</a></li>
-                            <li><a href="#">Гироскутеры EcoDrifter</a></li>
-                            <li><a href="#">Гироскутеры Ruswheel</a></li>
-                            <li><a href="#">Гироскутеры Smart Balance</a></li>
-                            <li><a href="#">Гироскутеры Solowheel</a></li>
-                            <li><a href="#">Гироскутеры Solowheel</a></li>
+                            <li><a href="internal.html">Моноколесо Airwheel</a></li>
+                            <li><a href="#">Моноколесо EcoDrift</a></li>
+                            <li><a href="#">Моноколесо EcoDrifter</a></li>
+                            <li><a href="#">Моноколесо Ruswheel</a></li>
+                            <li><a href="#">Моноколесо Smart Balance</a></li>
+                            <li><a href="#">Моноколесо Solowheel</a></li>
+                            <li><a href="#">Моноколесо Solowheel</a></li>
                         </ul>
                     </li>
                     <li class="menu-mob__list">
