--- a/basket.html
+++ b/basket.html
@@ -201,13 +201,13 @@
                         <a href="#">Моноколеса</a>
                         <img class="arrow-menu" src="img/icons/arrow-menu.png" alt="">
                         <ul class="menu-mob__list-submenu">
-                            <li><a href="#">Гироскутеры Airwheel</a></li>
-                            <li><a href="#">Гироскутеры EcoDrift</a></li>
-                            <li><a href="#">Гироскутеры EcoDrifter</a></li>
-                            <li><a href="#">Гироскутеры Ruswheel</a></li>
-                            <li><a href="#">Гироскутеры Smart Balance</a></li>
-                            <li><a href="#">Гироскутеры Solowheel</a></li>
-                            <li><a href="#">Гироскутеры Solowheel</a></li>
+                            <li><a href="internal.html">Моноколесо Airwheel</a></li>
+                            <li><a href="#">Моноколесо EcoDrift</a></li>
+                            <li><a href="#">Моноколесо EcoDrifter</a></li>
+                            <li><a href="#">Моноколесо Ruswheel</a></li>
+                            <li><a href="#">Моноколесо Smart Balance</a></li>
+                            <li><a href="#">Моноколесо Solowheel</a></li>
+                            <li><a href="#">Моноколесо Solowheel</a></li>
                         </ul>
                     </li>
                     <li class="menu-mob__list">
@@ -487,8 +487,11 @@
 <div class="modal">
     <div class="basket"><img src="img/icons/basket.png" alt=""><span></span></div>
     <p>В вашей корзине 1 товар <span>на сумму 9800 руб.</span></p>
-    <a href="#" class="btn-orange">оформить заказ</a>
+    <a href="basket.html" class="btn-orange">оформить заказ</a>
 </div>
+<div class="overlay">
+</div>
+
 <!-- end footer.html-->
 
 <!-- start html_close.html-->
