--- a/app/html/card-product-product.html
+++ b/app/html/card-product-product.html
@@ -20,7 +20,7 @@
                         </div>
                     </div>
                     <p class="new-price">12 500 руб.</p>
-                    <a href="#" class="btn-orange">в корзину</a>
+                    <a href="#" class="btn-orange in-basket">в корзину</a>
                 </a>
             </div>
             <div class="block">
@@ -42,7 +42,7 @@
                         </div>
                     </div>
                     <p class="new-price">12 500 руб.</p>
-                    <a href="#" class="btn-orange">в корзину</a>
+                    <a href="#" class="btn-orange in-basket">в корзину</a>
                 </a>
             </div>
             <div class="block">
@@ -64,7 +64,7 @@
                         </div>
                     </div>
                     <p class="new-price">12 500 руб.</p>
-                    <a href="#" class="btn-orange">в корзину</a>
+                    <a href="#" class="btn-orange in-basket">в корзину</a>
                 </a>
             </div>
             <div class="block">
@@ -86,7 +86,7 @@
                         </div>
                     </div>
                     <p class="new-price">12 500 руб.</p>
-                    <a href="#" class="btn-orange">в корзину</a>
+                    <a href="#" class="btn-orange in-basket">в корзину</a>
                 </a>
             </div>
         </div>
