--- a/app/html/home-stock.html
+++ b/app/html/home-stock.html
@@ -29,52 +29,56 @@
                     </div>
                     <p class="old-price">12 500 руб.</p>
                     <h2 class="new-price">9 999 руб.</h2>
-                    <a href="#" class="btn-orange">в корзину</a>
+                    <a href="#" class="btn-orange in-basket">в корзину</a>
                 </div>
             </div>
             <div class="home-stock__content__right">
                 <div class="home-stock__content__right__md-right">
 
                     <div class="block">
-                        <img src="img/mono-wheel.png" alt="">
-                        <h3>МОНОКОЛЕСО AIRWHEEL X5</h3>
-                        <div class="characteristics">
-                            <div class="characteristics__img">
-                                <img src="img/icons/speed.png" alt="">
-                                <p>16 км/ч</p>
+                        <a class="card-product" href="card-of-product.html">
+                            <img src="img/mono-wheel.png" alt="">
+                            <h3>МОНОКОЛЕСО AIRWHEEL X5</h3>
+                            <div class="characteristics">
+                                <div class="characteristics__img">
+                                    <img src="img/icons/speed.png" alt="">
+                                    <p>16 км/ч</p>
+                                </div>
+                                <div class="characteristics__img">
+                                    <img src="img/icons/distance.png" alt="">
+                                    <p>25 км</p>
+                                </div>
+                                <div class="characteristics__img">
+                                    <img src="img/icons/diameter.png" alt="">
+                                    <p>14“”</p>
+                                </div>
                             </div>
-                            <div class="characteristics__img">
-                                <img src="img/icons/distance.png" alt="">
-                                <p>25 км</p>
-                            </div>
-                            <div class="characteristics__img">
-                                <img src="img/icons/diameter.png" alt="">
-                                <p>14“”</p>
-                            </div>
-                        </div>
-                        <p class="new-price">12 500 руб.</p>
-                        <a href="#" class="btn-orange">в корзину</a>
+                            <p class="new-price">12 500 руб.</p>
+                            <a href="#" class="btn-orange in-basket">в корзину</a>
+                        </a>
                     </div>
 
                     <div class="block">
-                        <img src="img/mono-wheel.png" alt="">
-                        <h3>МОНОКОЛЕСО AIRWHEEL X5</h3>
-                        <div class="characteristics">
-                            <div class="characteristics__img">
-                                <img src="img/icons/speed.png" alt="">
-                                <p>16 км/ч</p>
+                        <a class="card-product" href="card-of-product.html">
+                            <img src="img/mono-wheel.png" alt="">
+                            <h3>МОНОКОЛЕСО AIRWHEEL X5</h3>
+                            <div class="characteristics">
+                                <div class="characteristics__img">
+                                    <img src="img/icons/speed.png" alt="">
+                                    <p>16 км/ч</p>
+                                </div>
+                                <div class="characteristics__img">
+                                    <img src="img/icons/distance.png" alt="">
+                                    <p>25 км</p>
+                                </div>
+                                <div class="characteristics__img">
+                                    <img src="img/icons/diameter.png" alt="">
+                                    <p>14“”</p>
+                                </div>
                             </div>
-                            <div class="characteristics__img">
-                                <img src="img/icons/distance.png" alt="">
-                                <p>25 км</p>
-                            </div>
-                            <div class="characteristics__img">
-                                <img src="img/icons/diameter.png" alt="">
-                                <p>14“”</p>
-                            </div>
-                        </div>
-                        <p class="new-price">12 500 руб.</p>
-                        <a href="#" class="btn-orange">в корзину</a>
+                            <p class="new-price">12 500 руб.</p>
+                            <a href="#" class="btn-orange in-basket">в корзину</a>
+                        </a>
                     </div>
 
                 </div>
@@ -82,66 +86,72 @@
                 <div class="home-stock__content__right__md-bottom">
 
                     <div class="block">
-                        <img src="img/mono-wheel.png" alt="">
-                        <h3>МОНОКОЛЕСО AIRWHEEL X5</h3>
-                        <div class="characteristics">
-                            <div class="characteristics__img">
-                                <img src="img/icons/speed.png" alt="">
-                                <p>16 км/ч</p>
+                        <a class="card-product" href="card-of-product.html">
+                            <img src="img/mono-wheel.png" alt="">
+                            <h3>МОНОКОЛЕСО AIRWHEEL X5</h3>
+                            <div class="characteristics">
+                                <div class="characteristics__img">
+                                    <img src="img/icons/speed.png" alt="">
+                                    <p>16 км/ч</p>
+                                </div>
+                                <div class="characteristics__img">
+                                    <img src="img/icons/distance.png" alt="">
+                                    <p>25 км</p>
+                                </div>
+                                <div class="characteristics__img">
+                                    <img src="img/icons/diameter.png" alt="">
+                                    <p>14“”</p>
+                                </div>
                             </div>
-                            <div class="characteristics__img">
-                                <img src="img/icons/distance.png" alt="">
-                                <p>25 км</p>
-                            </div>
-                            <div class="characteristics__img">
-                                <img src="img/icons/diameter.png" alt="">
-                                <p>14“”</p>
-                            </div>
-                        </div>
-                        <p class="new-price">12 500 руб.</p>
-                        <a href="#" class="btn-orange">в корзину</a>
+                            <p class="new-price">12 500 руб.</p>
+                            <a href="#" class="btn-orange in-basket">в корзину</a>
+                        </a>
                     </div>
 
                     <div class="block">
-                        <img src="img/mono-wheel.png" alt="">
-                        <h3>МОНОКОЛЕСО AIRWHEEL X5</h3>
-                        <div class="characteristics">
-                            <div class="characteristics__img">
-                                <img src="img/icons/speed.png" alt="">
-                                <p>16 км/ч</p>
+                        <a class="card-product" href="card-of-product.html">
+                            <img src="img/mono-wheel.png" alt="">
+                            <h3>МОНОКОЛЕСО AIRWHEEL X5</h3>
+                            <div class="characteristics">
+                                <div class="characteristics__img">
+                                    <img src="img/icons/speed.png" alt="">
+                                    <p>16 км/ч</p>
+                                </div>
+                                <div class="characteristics__img">
+                                    <img src="img/icons/distance.png" alt="">
+                                    <p>25 км</p>
+                                </div>
+                                <div class="characteristics__img">
+                                    <img src="img/icons/diameter.png" alt="">
+                                    <p>14“”</p>
+                                </div>
                             </div>
-                            <div class="characteristics__img">
-                                <img src="img/icons/distance.png" alt="">
-                                <p>25 км</p>
-                            </div>
-                            <div class="characteristics__img">
-                                <img src="img/icons/diameter.png" alt="">
-                                <p>14“”</p>
-                            </div>
-                        </div>
-                        <p class="new-price">12 500 руб.</p>
-                        <a href="#" class="btn-orange">в корзину</a>
+                            <p class="new-price">12 500 руб.</p>
+                            <a href="#" class="btn-orange in-basket">в корзину</a>
+                        </a>
                     </div>
 
                     <div class="block for-middle-screen">
-                        <img src="img/mono-wheel.png" alt="">
-                        <h3>МОНОКОЛЕСО AIRWHEEL X5</h3>
-                        <div class="characteristics">
-                            <div class="characteristics__img">
-                                <img src="img/icons/speed.png" alt="">
-                                <p>16 км/ч</p>
+                        <a class="card-product" href="card-of-product.html">
+                            <img src="img/mono-wheel.png" alt="">
+                            <h3>МОНОКОЛЕСО AIRWHEEL X5</h3>
+                            <div class="characteristics">
+                                <div class="characteristics__img">
+                                    <img src="img/icons/speed.png" alt="">
+                                    <p>16 км/ч</p>
+                                </div>
+                                <div class="characteristics__img">
+                                    <img src="img/icons/distance.png" alt="">
+                                    <p>25 км</p>
+                                </div>
+                                <div class="characteristics__img">
+                                    <img src="img/icons/diameter.png" alt="">
+                                    <p>14“”</p>
+                                </div>
                             </div>
-                            <div class="characteristics__img">
-                                <img src="img/icons/distance.png" alt="">
-                                <p>25 км</p>
-                            </div>
-                            <div class="characteristics__img">
-                                <img src="img/icons/diameter.png" alt="">
-                                <p>14“”</p>
-                            </div>
-                        </div>
-                        <p class="new-price">12 500 руб.</p>
-                        <a href="#" class="btn-orange">в корзину</a>
+                            <p class="new-price">12 500 руб.</p>
+                            <a href="#" class="btn-orange in-basket">в корзину</a>
+                        </a>
                     </div>
 
                 </div>
