--- a/app/html/internal.html
+++ b/app/html/internal.html
@@ -52,7 +52,7 @@
                     </div>
                 </div>
                 <p class="new-price">12 500 руб.</p>
-                <a href="#" class="btn-orange">в корзину</a>
+                <a href="#" class="btn-orange in-basket">в корзину</a>
             </div>
             <div class="block">
                 <img src="img/mono-wheel.png" alt="">
@@ -72,7 +72,7 @@
                     </div>
                 </div>
                 <p class="new-price">12 500 руб.</p>
-                <a href="#" class="btn-orange">в корзину</a>
+                <a href="#" class="btn-orange in-basket">в корзину</a>
             </div>
             <div class="block">
                 <img src="img/mono-wheel.png" alt="">
@@ -92,7 +92,7 @@
                     </div>
                 </div>
                 <p class="new-price">12 500 руб.</p>
-                <a href="#" class="btn-orange">в корзину</a>
+                <a href="#" class="btn-orange in-basket">в корзину</a>
             </div>
             <div class="block">
                 <img src="img/mono-wheel.png" alt="">
@@ -112,7 +112,7 @@
                     </div>
                 </div>
                 <p class="new-price">12 500 руб.</p>
-                <a href="#" class="btn-orange">в корзину</a>
+                <a href="#" class="btn-orange in-basket">в корзину</a>
             </div>
             <div class="block">
                 <img src="img/mono-wheel.png" alt="">
@@ -132,7 +132,7 @@
                     </div>
                 </div>
                 <p class="new-price">12 500 руб.</p>
-                <a href="#" class="btn-orange">в корзину</a>
+                <a href="#" class="btn-orange in-basket">в корзину</a>
             </div>
             <div class="block">
                 <img src="img/mono-wheel.png" alt="">
@@ -152,7 +152,7 @@
                     </div>
                 </div>
                 <p class="new-price">12 500 руб.</p>
-                <a href="#" class="btn-orange">в корзину</a>
+                <a href="#" class="btn-orange in-basket">в корзину</a>
             </div>
             <div class="block for-mobile">
                 <img src="img/mono-wheel.png" alt="">
@@ -172,7 +172,7 @@
                     </div>
                 </div>
                 <p class="new-price">12 500 руб.</p>
-                <a href="#" class="btn-orange">в корзину</a>
+                <a href="#" class="btn-orange in-basket">в корзину</a>
             </div>
             <div class="block for-mobile">
                 <img src="img/mono-wheel.png" alt="">
@@ -192,7 +192,7 @@
                     </div>
                 </div>
                 <p class="new-price">12 500 руб.</p>
-                <a href="#" class="btn-orange">в корзину</a>
+                <a href="#" class="btn-orange in-basket">в корзину</a>
             </div>
             <div class="block for-mobile">
                 <img src="img/mono-wheel.png" alt="">
@@ -212,7 +212,7 @@
                     </div>
                 </div>
                 <p class="new-price">12 500 руб.</p>
-                <a href="#" class="btn-orange">в корзину</a>
+                <a href="#" class="btn-orange in-basket">в корзину</a>
             </div>
             <div class="internal__catalog__pagination">
                 <div class="internal__catalog__pagination__link">
