--- a/card-of-product.html
+++ b/card-of-product.html
@@ -201,13 +201,13 @@
                         <a href="#">Моноколеса</a>
                         <img class="arrow-menu" src="img/icons/arrow-menu.png" alt="">
                         <ul class="menu-mob__list-submenu">
-                            <li><a href="#">Гироскутеры Airwheel</a></li>
-                            <li><a href="#">Гироскутеры EcoDrift</a></li>
-                            <li><a href="#">Гироскутеры EcoDrifter</a></li>
-                            <li><a href="#">Гироскутеры Ruswheel</a></li>
-                            <li><a href="#">Гироскутеры Smart Balance</a></li>
-                            <li><a href="#">Гироскутеры Solowheel</a></li>
-                            <li><a href="#">Гироскутеры Solowheel</a></li>
+                            <li><a href="internal.html">Моноколесо Airwheel</a></li>
+                            <li><a href="#">Моноколесо EcoDrift</a></li>
+                            <li><a href="#">Моноколесо EcoDrifter</a></li>
+                            <li><a href="#">Моноколесо Ruswheel</a></li>
+                            <li><a href="#">Моноколесо Smart Balance</a></li>
+                            <li><a href="#">Моноколесо Solowheel</a></li>
+                            <li><a href="#">Моноколесо Solowheel</a></li>
                         </ul>
                     </li>
                     <li class="menu-mob__list">
@@ -326,7 +326,7 @@
                     <input class="cipher" type="number" min="1" max="999" value="1">
                     <span class="plus">+</span>
                 </div>
-                <a href="#" class="btn-orange">в корзину</a>
+                <a href="#" class="btn-orange in-basket">в корзину</a>
                 <ul>
                     <li>- Аккумулятор</li>
                     <li>- Bluetooth</li>
@@ -347,35 +347,25 @@
                 </div>
             </div>
         </div>
+        <div class="home-stock__head for-card-prod">
+            <ul>
+                <li><img src="img/icons/delivery.png" alt="">
+                    <p><span>Бесплатная доставка</span><br />по всей России</p>
+                </li>
+                <li><img src="img/icons/guarantee.png" alt="">
+                    <p><span>Гарантия</span><br />12 месяцев</p>
+                </li>
+                <li><img src="img/icons/test-drive.png" alt="">
+                    <p><span>Тест-драйв</span><br />перед покупкой</p>
+                </li>
+                <li><img src="img/icons/repair.png" alt="">
+                    <p><span>Ремонт</span><br />любой сложности</p>
+                </li>
+            </ul>
+        </div>
     </div>
 </div>
 <!-- end card-of-product.html-->
-
-<!-- start services.html-->
-<div class="home-stock">
-    <div class="container">
-        <div class="home-stock__head">
-        <ul>
-            <li><img src="img/icons/delivery.png" alt="">
-                <p><span>Бесплатная доставка</span><br />по всей России</p>
-            </li>
-            <li class="vertical-line"></li>
-            <li><img src="img/icons/guarantee.png" alt="">
-                <p><span>Гарантия</span><br />12 месяцев</p>
-            </li>
-            <li class="vertical-line"></li>
-            <li><img src="img/icons/test-drive.png" alt="">
-                <p><span>Тест-драйв</span><br />перед покупкой</p>
-            </li>
-            <li class="vertical-line"></li>
-            <li><img src="img/icons/repair.png" alt="">
-                <p><span>Ремонт</span><br />любой сложности</p>
-            </li>
-        </ul>
-    </div>
-    </div>
-</div>
-<!-- end services.html-->
 
 <!-- start characteristics.html-->
 <div class="characteristics">
@@ -451,12 +441,20 @@
 <div class="descriptions">
     <div class="container">
         <div class="descriptions__wrap">
-            <p>RUSWHEEL X1 - моноколесо, прекрасно подходящее для новичков и подростков. В комплект входит набор дополнительных колесиков, которые придадут ощущение устойчивости на первых порах. Подножки моноколеса представляют собой широкие удобные платформы для ступней с прорезиненными элементами, предотвращающими скольжение. </p>
-            <p>Корпус моноколеса выполнен в черном цвете. Красные панели по сторонам уницикла предназначены для комфорта и снятия усталости с ног во время движения. </p>
-            <p>Моноколесо движется со скоростью 16 километров в час. Такая скорость позволяет безопасно кататься по улицам города, подниматься на небольшие уклоны и спускаться с горок. Специальная защитная система не позволит моноколесу сильно разогнаться.
-            </p>
-            <p>Дальность хода моноколеса на одном заряде - 15 километров. Для подзарядки аккумулятора требуется всего 1 час.</p>
-            <p>Моноколесо компактное и легкое - весит всего 9 килограмм. Его легко можно переносить в рюкзаке или сумке, а также с помощью встроенной ручки.</p>
+            <p>RUSWHEEL X1 - моноколесо, прекрасно подходящее для новичков и подростков. В комплект входит набор дополнительных колесиков, которые придадут ощущение устойчивости на первых порах. Подножки моноколеса представляют собой широкие удобные платформы для ступней с прорезиненными элементами, предотвращающими скольжение.
+                <br>
+                <br>
+                Корпус моноколеса выполнен в черном цвете. Красные панели по сторонам уницикла предназначены для комфорта и снятия усталости с ног во время движения.
+                <br>
+                <br>
+                Моноколесо движется со скоростью 16 километров в час. Такая скорость позволяет безопасно кататься по улицам города, подниматься на небольшие уклоны и спускаться с горок. Специальная защитная система не позволит моноколесу сильно разогнаться.
+                <br>
+                <br>
+                Дальность хода моноколеса на одном заряде - 15 километров. Для подзарядки аккумулятора требуется всего 1 час.
+                <br>
+                <br>
+                Моноколесо компактное и легкое - весит всего 9 килограмм. Его легко можно переносить в рюкзаке или сумке, а также с помощью встроенной ручки.</p>
+            <a href="#" class="btn-for-middle">ЧИТАТЬ ДАЛЕЕ</a>
         </div>
     </div>
 </div>
@@ -485,7 +483,7 @@
                         </div>
                     </div>
                     <p class="new-price">12 500 руб.</p>
-                    <a href="#" class="btn-orange">в корзину</a>
+                    <a href="#" class="btn-orange in-basket">в корзину</a>
                 </a>
             </div>
             <div class="block">
@@ -507,7 +505,7 @@
                         </div>
                     </div>
                     <p class="new-price">12 500 руб.</p>
-                    <a href="#" class="btn-orange">в корзину</a>
+                    <a href="#" class="btn-orange in-basket">в корзину</a>
                 </a>
             </div>
             <div class="block">
@@ -529,7 +527,7 @@
                         </div>
                     </div>
                     <p class="new-price">12 500 руб.</p>
-                    <a href="#" class="btn-orange">в корзину</a>
+                    <a href="#" class="btn-orange in-basket">в корзину</a>
                 </a>
             </div>
             <div class="block">
@@ -551,7 +549,7 @@
                         </div>
                     </div>
                     <p class="new-price">12 500 руб.</p>
-                    <a href="#" class="btn-orange">в корзину</a>
+                    <a href="#" class="btn-orange in-basket">в корзину</a>
                 </a>
             </div>
         </div>
@@ -715,8 +713,11 @@
 <div class="modal">
     <div class="basket"><img src="img/icons/basket.png" alt=""><span></span></div>
     <p>В вашей корзине 1 товар <span>на сумму 9800 руб.</span></p>
-    <a href="#" class="btn-orange">оформить заказ</a>
+    <a href="basket.html" class="btn-orange">оформить заказ</a>
 </div>
+<div class="overlay">
+</div>
+
 <!-- end footer.html-->
 
 <!-- start html_close.html-->
