--- a/internal.html
+++ b/internal.html
@@ -201,13 +201,13 @@
                         <a href="#">Моноколеса</a>
                         <img class="arrow-menu" src="img/icons/arrow-menu.png" alt="">
                         <ul class="menu-mob__list-submenu">
-                            <li><a href="#">Гироскутеры Airwheel</a></li>
-                            <li><a href="#">Гироскутеры EcoDrift</a></li>
-                            <li><a href="#">Гироскутеры EcoDrifter</a></li>
-                            <li><a href="#">Гироскутеры Ruswheel</a></li>
-                            <li><a href="#">Гироскутеры Smart Balance</a></li>
-                            <li><a href="#">Гироскутеры Solowheel</a></li>
-                            <li><a href="#">Гироскутеры Solowheel</a></li>
+                            <li><a href="internal.html">Моноколесо Airwheel</a></li>
+                            <li><a href="#">Моноколесо EcoDrift</a></li>
+                            <li><a href="#">Моноколесо EcoDrifter</a></li>
+                            <li><a href="#">Моноколесо Ruswheel</a></li>
+                            <li><a href="#">Моноколесо Smart Balance</a></li>
+                            <li><a href="#">Моноколесо Solowheel</a></li>
+                            <li><a href="#">Моноколесо Solowheel</a></li>
                         </ul>
                     </li>
                     <li class="menu-mob__list">
@@ -317,7 +317,7 @@
                     </div>
                 </div>
                 <p class="new-price">12 500 руб.</p>
-                <a href="#" class="btn-orange">в корзину</a>
+                <a href="#" class="btn-orange in-basket">в корзину</a>
             </div>
             <div class="block">
                 <img src="img/mono-wheel.png" alt="">
@@ -337,7 +337,7 @@
                     </div>
                 </div>
                 <p class="new-price">12 500 руб.</p>
-                <a href="#" class="btn-orange">в корзину</a>
+                <a href="#" class="btn-orange in-basket">в корзину</a>
             </div>
             <div class="block">
                 <img src="img/mono-wheel.png" alt="">
@@ -357,7 +357,7 @@
                     </div>
                 </div>
                 <p class="new-price">12 500 руб.</p>
-                <a href="#" class="btn-orange">в корзину</a>
+                <a href="#" class="btn-orange in-basket">в корзину</a>
             </div>
             <div class="block">
                 <img src="img/mono-wheel.png" alt="">
@@ -377,7 +377,7 @@
                     </div>
                 </div>
                 <p class="new-price">12 500 руб.</p>
-                <a href="#" class="btn-orange">в корзину</a>
+                <a href="#" class="btn-orange in-basket">в корзину</a>
             </div>
             <div class="block">
                 <img src="img/mono-wheel.png" alt="">
@@ -397,7 +397,7 @@
                     </div>
                 </div>
                 <p class="new-price">12 500 руб.</p>
-                <a href="#" class="btn-orange">в корзину</a>
+                <a href="#" class="btn-orange in-basket">в корзину</a>
             </div>
             <div class="block">
                 <img src="img/mono-wheel.png" alt="">
@@ -417,7 +417,7 @@
                     </div>
                 </div>
                 <p class="new-price">12 500 руб.</p>
-                <a href="#" class="btn-orange">в корзину</a>
+                <a href="#" class="btn-orange in-basket">в корзину</a>
             </div>
             <div class="block for-mobile">
                 <img src="img/mono-wheel.png" alt="">
@@ -437,7 +437,7 @@
                     </div>
                 </div>
                 <p class="new-price">12 500 руб.</p>
-                <a href="#" class="btn-orange">в корзину</a>
+                <a href="#" class="btn-orange in-basket">в корзину</a>
             </div>
             <div class="block for-mobile">
                 <img src="img/mono-wheel.png" alt="">
@@ -457,7 +457,7 @@
                     </div>
                 </div>
                 <p class="new-price">12 500 руб.</p>
-                <a href="#" class="btn-orange">в корзину</a>
+                <a href="#" class="btn-orange in-basket">в корзину</a>
             </div>
             <div class="block for-mobile">
                 <img src="img/mono-wheel.png" alt="">
@@ -477,7 +477,7 @@
                     </div>
                 </div>
                 <p class="new-price">12 500 руб.</p>
-                <a href="#" class="btn-orange">в корзину</a>
+                <a href="#" class="btn-orange in-basket">в корзину</a>
             </div>
             <div class="internal__catalog__pagination">
                 <div class="internal__catalog__pagination__link">
@@ -652,8 +652,11 @@
 <div class="modal">
     <div class="basket"><img src="img/icons/basket.png" alt=""><span></span></div>
     <p>В вашей корзине 1 товар <span>на сумму 9800 руб.</span></p>
-    <a href="#" class="btn-orange">оформить заказ</a>
+    <a href="basket.html" class="btn-orange">оформить заказ</a>
 </div>
+<div class="overlay">
+</div>
+
 <!-- end footer.html-->
 
 <!-- start html_close.html-->
